--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.5",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
