--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gimnasio-nuevo-malvin",
   "version": "0.1.0",
+  "homepage": "https://nicolas-mauber.github.io/gimnasioNuevoMalvin",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
@@ -13,6 +14,7 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
+    "gh-pages": "^3.2.3",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
@@ -24,6 +26,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,8 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
   }
 }
